feat(A1): replace bcrypt with Argon2id, fix JWT expiry to 15min/30days, add security tests

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -11,7 +11,8 @@ dependencies = [
     "asyncpg>=0.29.0",
     "pydantic>=2.5.0",
     "pydantic-settings>=2.1.0",
-    "bcrypt>=4.1.0",
+    "argon2-cffi>=21.3.0",
+    "passlib[argon2]>=1.7.4",
     "python-jose[cryptography]>=3.3.0",
     "python-multipart>=0.0.6",
     "email-validator>=2.0",
