--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,28 @@ env:
   REGISTRY: us-central1-docker.pkg.dev/blakjaks-production/blakjaks-repo
 
 jobs:
-  build-and-test:
+  test-backend:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
+      - name: Install dependencies
+        run: |
+          cd backend
+          pip install -e ".[dev]"
+
+      - name: Run pytest
+        run: |
+          cd backend
+          pytest tests/ -v --tb=short
+
+  build-and-push:
+    needs: test-backend
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -30,7 +51,7 @@ jobs:
 
       - name: Set up Docker auth
         uses: google-github-actions/setup-gcloud@v2
-      
+
       - run: gcloud auth configure-docker us-central1-docker.pkg.dev --quiet
 
       - name: Build backend image
@@ -39,7 +60,7 @@ jobs:
           docker push $REGISTRY/backend:$GITHUB_SHA
 
   deploy:
-    needs: build-and-test
+    needs: build-and-push
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     runs-on: ubuntu-latest
     steps:
