feat(A2): add all missing env var groups to config.py, update .env.example, add redis+celery deps, add config tests

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,35 +1,188 @@
+# BlakJaks Backend — Environment Variables Reference
+# Copy this file to .env and fill in values before running locally.
+# Never commit .env to source control.
+
+# =============================================================================
+# CORE
+# =============================================================================
 DATABASE_URL=postgresql+asyncpg://postgres:postgres@localhost:5432/blakjaks
 SECRET_KEY=change-me-to-a-random-256-bit-hex-string
+# Where to get: openssl rand -hex 32
 ALGORITHM=HS256
-ACCESS_TOKEN_EXPIRE_MINUTES=30
-REFRESH_TOKEN_EXPIRE_DAYS=7
+ACCESS_TOKEN_EXPIRE_MINUTES=15
+REFRESH_TOKEN_EXPIRE_DAYS=30
 RESET_TOKEN_EXPIRE_MINUTES=60
 ENVIRONMENT=development
-CORS_ORIGINS=["*"]
+CORS_ORIGINS=["http://localhost:3000","http://localhost:3001","http://localhost:3002"]
 
-# Third-party APIs
-KINTSUGI_API_KEY=your-kintsugi-api-key
-AGECHECKER_API_KEY=your-agechecker-api-key
-BREVO_API_KEY=your-brevo-api-key
-INTERCOM_API_KEY=your-intercom-api-key
-GOOGLE_TRANSLATE_API_KEY=your-google-translate-api-key
+# =============================================================================
+# REDIS
+# =============================================================================
+REDIS_URL=redis://localhost:6379/0
+# Where to get: local docker-compose redis, or GCP Memorystore URL in production
+REDIS_CLUSTER_ENABLED=false
+REDIS_SSL_ENABLED=false
 
-# Polygon blockchain
-POLYGON_RPC_URL=https://polygon-amoy.infura.io/v3/YOUR_KEY
-POLYGON_NETWORK=amoy
+# =============================================================================
+# CELERY
+# =============================================================================
+CELERY_BROKER_URL=redis://localhost:6379/0
+CELERY_RESULT_BACKEND=redis://localhost:6379/0
 
-# Google Cloud KMS (treasury signing)
+# =============================================================================
+# GOOGLE CLOUD STORAGE
+# =============================================================================
+GCS_PROJECT_ID=blakjaks-production
+# Where to get: GCP Console → Project ID
+GCS_BUCKET_AVATARS=blakjaks-user-avatars
+GCS_BUCKET_ASSETS=blakjaks-assets
+GCS_BUCKET_QR=blakjaks-qr-codes
+# Where to get: GCP Console → Cloud Storage → create buckets with these names
+
+# =============================================================================
+# GOOGLE CLOUD KMS (Treasury Signing)
+# =============================================================================
+GCP_PROJECT_ID=blakjaks-production
+GCP_KMS_KEY_RING=blakjaks-crypto
+GCP_KMS_KEY_NAME=treasury-signer
+GCP_KMS_LOCATION=us-central1
+# Where to get: GCP Console → Security → Key Management → create key ring + asymmetric key
 KMS_PROJECT_ID=blakjaks-production
 KMS_LOCATION=us-central1
 KMS_KEYRING=blakjaks-crypto
 KMS_KEY_NAME=treasury-signer
 KMS_KEY_VERSION=1
-
-# Pool-specific KMS keys
 KMS_CONSUMER_KEY=treasury-signer
 KMS_AFFILIATE_KEY=affiliate-pool-signer
 KMS_WHOLESALE_KEY=wholesale-pool-signer
 
-# USDT contract addresses
+# =============================================================================
+# BLOCKCHAIN (Polygon)
+# =============================================================================
+POLYGON_CHAIN_ID=80002
+# Amoy testnet = 80002 | Polygon mainnet = 137
+BLOCKCHAIN_POLYGON_NODE_URL=http://localhost:8545
+BLOCKCHAIN_POLYGON_NODE_WS_URL=ws://localhost:8546
+# Where to get: internal GKE service URL after Task C2 deploys the Polygon node
+BLOCKCHAIN_MEMBER_TREASURY_ADDRESS=
+BLOCKCHAIN_AFFILIATE_TREASURY_ADDRESS=
+BLOCKCHAIN_WHOLESALE_TREASURY_ADDRESS=
+# Where to get: wallet addresses derived from KMS asymmetric keys
+POLYGON_RPC_URL=https://polygon-amoy.infura.io/v3/YOUR_KEY
+POLYGON_NETWORK=amoy
 USDT_CONTRACT_ADDRESS_MAINNET=0xc2132D05D31c914a87C6611C10748AEb04B58e8F
 USDT_CONTRACT_ADDRESS_AMOY=
+
+# =============================================================================
+# TELLER.IO (Bank Sync — mTLS)
+# =============================================================================
+TELLER_CERT_PATH=/path/to/teller-cert.pem
+TELLER_KEY_PATH=/path/to/teller-key.pem
+# Where to get: teller.io dashboard → Application Settings → download certificate bundle
+TELLER_ENV=sandbox
+# sandbox (testing) or production
+TELLER_ACCOUNT_IDS=
+# Where to get: comma-separated Teller account IDs for Operating, Reserve, Comp Pool
+
+# =============================================================================
+# OPENAI
+# =============================================================================
+OPENAI_API_KEY=
+# Where to get: platform.openai.com → API Keys
+
+# =============================================================================
+# 7TV / GIPHY
+# =============================================================================
+SEVEN_TV_EMOTE_SET_ID=
+# Where to get: 7TV dashboard → your emote set → copy the set ID from the URL
+GIPHY_API_KEY=
+# Where to get: developers.giphy.com → Create an App → SDK key
+
+# =============================================================================
+# APPLE PUSH NOTIFICATIONS (APNs — iOS only, no Firebase)
+# =============================================================================
+APNS_KEY_ID=
+APNS_TEAM_ID=
+APNS_BUNDLE_ID=com.blakjaks.app
+APNS_CERT_PATH=/path/to/AuthKey_XXXXXXXXXX.p8
+# Where to get: Apple Developer Portal → Certificates, Identifiers & Profiles → Keys
+# Download the .p8 file (one-time download — do not lose it)
+
+# =============================================================================
+# FIREBASE CLOUD MESSAGING (FCM — Android only)
+# =============================================================================
+FCM_SERVER_KEY=
+# Where to get: Firebase Console → Project Settings → Cloud Messaging → Server key
+
+# =============================================================================
+# SENTRY (Error Tracking)
+# =============================================================================
+SENTRY_DSN=
+# Where to get: sentry.io → Project → Settings → Client Keys (DSN)
+SENTRY_ENVIRONMENT=development
+SENTRY_RELEASE=
+# Set automatically in CI via $GITHUB_SHA
+SENTRY_TRACES_SAMPLE_RATE=0.1
+
+# =============================================================================
+# INTERCOM (Live Chat Support)
+# =============================================================================
+INTERCOM_APP_ID=
+INTERCOM_API_KEY=
+INTERCOM_IDENTITY_VERIFICATION_SECRET=
+INTERCOM_IOS_API_KEY=
+INTERCOM_ANDROID_API_KEY=
+# Where to get: Intercom dashboard → Settings → Installation (App ID)
+#               Settings → API Keys (API key)
+#               Settings → Identity Verification (secret)
+#               iOS/Android SDK keys from respective platform settings
+
+# =============================================================================
+# GOOGLE CLOUD TRANSLATION
+# =============================================================================
+TRANSLATION_GOOGLE_PROJECT_ID=blakjaks-production
+TRANSLATION_GOOGLE_CREDENTIALS_PATH=/path/to/service-account.json
+# Where to get: GCP Console → IAM → Service Accounts → create SA with Cloud Translation API role
+TRANSLATION_ENABLED=false
+TRANSLATION_SUPPORTED_LANGUAGES=en,es,fr,de,ja,zh,pt,ar,ko,ru
+TRANSLATION_CACHE_TTL=86400
+
+# =============================================================================
+# GOOGLE ANALYTICS
+# =============================================================================
+GA4_MEASUREMENT_ID=
+# Where to get: Google Analytics → Admin → Data Streams → Web stream → Measurement ID
+
+# =============================================================================
+# KINTSUGI (Tax Calculation)
+# =============================================================================
+KINTSUGI_API_KEY=
+KINTSUGI_API_URL=https://api.kintsugi.io
+# Where to get: Kintsugi dashboard → Settings → API Keys
+
+# =============================================================================
+# PAYMENT PROCESSOR (TBD — pluggable)
+# =============================================================================
+PAYMENT_PROCESSOR=
+# Choose one: stripe | square | authorize
+PAYMENT_SECRET_KEY=
+PAYMENT_PUBLISHABLE_KEY=
+PAYMENT_WEBHOOK_SECRET=
+# Where to get: chosen processor's developer dashboard → API Keys
+
+# =============================================================================
+# STREAMYARD / SELERY
+# =============================================================================
+STREAMYARD_API_KEY=
+SELERY_API_KEY=
+# Where to get: respective vendor dashboards → API Keys
+
+# =============================================================================
+# AGECHECKER / BREVO (Legacy — existing code)
+# =============================================================================
+AGECHECKER_API_KEY=
+# Where to get: agechecker.net → API access
+BREVO_API_KEY=
+# Where to get: Brevo dashboard → Settings → API Keys
+GOOGLE_TRANSLATE_API_KEY=
+# Legacy — prefer TRANSLATION_GOOGLE_CREDENTIALS_PATH for new code
