--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -16,6 +16,8 @@ dependencies = [
     "python-jose[cryptography]>=3.3.0",
     "python-multipart>=0.0.6",
     "email-validator>=2.0",
+    "redis>=5.0.0",
+    "celery>=5.3.0",
     "httpx>=0.26.0",
     "web3>=6.15.0",
     "google-cloud-kms>=2.21.0",
